K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: action-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-i
        image: bhaskarboruah10/myapp:IMAGE_TAG
        imagePullPolicy: Always

        ports:
        - containerPort: 80
