K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: action-service
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
